Fix repository URL

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git@github.com-personal_github:amandasantanati/spotify-wrapper.git"
+    "url": "git@github.com:amandasantanati/spotify-wrapper.git"
   },
   "keywords": [],
   "author": "Amanda Santana <amandasantanati@gmail.com> (http://amandasantanati.com.br/)",
