--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run lint && npm run test:coverage"
+      "pre-push": "npm run lint"
     }
   },
   "nyc": {
@@ -47,6 +47,5 @@
     "nyc": "^15.0.1",
     "sinon": "^9.0.2",
     "sinon-chai": "^3.5.0"
-  },
-  "dependencies": {}
+  }
 }
