--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "./node_modules/.bin/eslint src/*.js",
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require @babel/register",
     "test:tdd": "npm run test -- --watch",
-    "test:coverage": "nyc npm run test"
+    "test:coverage": "nyc npm run test",
+    "coveralls": "npm run test:coverage && nyc report --reporter=text-lcov | coveralls"
   },
   "husky": {
     "hooks": {
@@ -46,6 +47,7 @@
     "@babel/register": "^7.9.0",
     "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
+    "coveralls": "^3.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
